--- a/src/app/about-me/work-history.module.scss
+++ b/src/app/about-me/work-history.module.scss
@@ -1,5 +1,4 @@
 .workHistory {
-  margin-top: 4rem;
   padding: 0;
   display: flex;
   flex-direction: column;
